filtro de ingresos

--- a/frontend/src/app/componentes/administrador/reportes/reporte-ingresos/reporte-ingresos.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/reporte-ingresos/reporte-ingresos.component.html
@@ -66,4 +66,4 @@
 
 
 
-    <app-filtro-ingresos (ingresoFiltradoMes)="recibeIngresosAnio($event)" (ingresoFiltradoAnio)="recibeIngresosMes($event)"></app-filtro-ingresos>
+    <app-filtro-ingresos (ingresoFiltradoMes)="recibeIngresosMes($event)" (ingresoFiltradoAnio)="recibeIngresosAnio($event)"></app-filtro-ingresos>
