Filtro de Mes y Año en los ingresos

--- a/frontend/src/app/componentes/administrador/reportes/modales/filtro-usuarios/filtro-usuarios.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/modales/filtro-usuarios/filtro-usuarios.component.html
@@ -29,14 +29,14 @@
                         <div class="row">
                             <div class="col-md-6 mb-3">
                                 <label for="validationServer03">Fecha de inicio</label>
-                                <input type="date" formControlName="fechainicio" class="form-control form-control-sm" id="validationServer15" required>
+                                <input type="date" formControlName="fechainicio" class="form-control form-control-sm" required>
                                 <div class="invalid-feedback">
                                     Campo obligatorio
                                 </div>
                             </div>
                             <div class="col-md-6 mb-3">
                                 <label for="validationServer04">Fecha fin</label>
-                                <input type="date" formControlName="fechafin" class="form-control form-control-sm" id="validationServer16" required>
+                                <input type="date" formControlName="fechafin" class="form-control form-control-sm" required>
                                 <div class="invalid-feedback">
                                     Campo obligatorio
                                 </div>
