--- a/frontend/src/app/componentes/administrador/reportes/reporte-usuarios/reporte-usuarios.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/reporte-usuarios/reporte-usuarios.component.html
@@ -2,7 +2,7 @@
     <div class="row mb-3">
         <button type="button" class="btn btn-sm mr-auto btn-volver" (click)="limpiarModal()" data-toggle="modal" data-target="#filtroUsuarios"><i class="fa fa-reply-all" aria-hidden="true"></i> Volver</button>
         <h4 class="ml-3">Reporte de Usuarios</h4>
-        <button type="button" class="btn btn-sm ml-auto btn-volver"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Generar PDF</button>
+        <button type="button" class="btn btn-sm ml-auto btn-volver" (click)="generarPDF()"><i class="fa fa-file-pdf" aria-hidden="true"></i> Generar PDF</button>
     </div>
 
     <div class="row ">
