--- a/frontend/src/app/componentes/proceso-pago/informacion-pago/informacion-pago.component.html
+++ b/frontend/src/app/componentes/proceso-pago/informacion-pago/informacion-pago.component.html
@@ -74,8 +74,7 @@
                             [class.is-invalid]="validation('agencia')" id="validationCustom06" required>
                             <option selected disabled active value="">Agencia de envío</option>
 
-                            <option value="{{agencia.idagenciaenvio}}" *ngFor="let agencia of agencias">{{agencia.nombre}}</option>
-
+                            <option class="w-100" value="{{agencia.idagenciaenvio}}" *ngFor="let agencia of agencias">{{agencia.nombre}} L {{agencia.precio}}</option>
                         </select>
                         <div class="invalid-feedback">
                             No válido
