--- a/frontend/src/app/componentes/administrador/reportes/reporte-ventas/reporte-ventas.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/reporte-ventas/reporte-ventas.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="row mb-3">
-        <button type="button" class="btn btn-sm mr-auto btn-volver" (click)="limpiarModal()" data-toggle="modal" data-target="#filtroVentas" ><i class="fa fa-reply-all" aria-hidden="true"></i> Volver</button>
+        <button type="button" class="btn btn-sm mr-auto btn-volver" (click)="limpiarModal()" data-toggle="modal" data-target="#filtroVentas"><i class="fa fa-reply-all" aria-hidden="true"></i> Volver</button>
         <h4 class="ml-3">Reporte de ventas</h4>
-        <button type="button" class="btn btn-sm ml-auto btn-volver"><i class="far fa-file-pdf"></i> Generar PDF</button>
+        <button type="button" class="btn btn-sm ml-auto btn-volver" (click)="generarPDF()"><i class="far fa-file-pdf"></i> Generar PDF</button>
     </div>
     <div class="row">
         <div class="table-responsive">
@@ -28,8 +28,8 @@
                         <td>{{producto.tipobase}}</td>
                         <td class="pl-2 pr-0">
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item p-0 pl-1 text-left"  *ngFor="let especie of producto.especie">{{especie}}</li>
-                              </ul>
+                                <li class="list-group-item p-0 pl-1 text-left" *ngFor="let especie of producto.especie">{{especie}}</li>
+                            </ul>
                         </td>
                         <td class="text-center">{{producto.cantidad_vendida}}</td>
                         <td>L {{producto.precio_venta}}</td>
@@ -55,4 +55,3 @@
 </div>
 
 <app-filtro-ventas (ventasFiltrado)="recibeVentas($event)" (nombreProducto)="recibeNombreProducto($event)"></app-filtro-ventas>
-
