Generar pdf faltantes
Se agregó la funcionalidad para generar pdf del reporte de ingresos

--- a/frontend/src/app/componentes/administrador/reportes/reporte-ingresos/reporte-ingresos.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/reporte-ingresos/reporte-ingresos.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="row mb-3">
-        <button type="button" class="btn btn-sm mr-auto btn-volver" data-toggle="modal" data-target="#filtroReporteIngesos"><i class="fa fa-reply-all" aria-hidden="true"></i> Volver</button>
+        <button type="button" class="btn btn-sm mr-auto btn-volver" data-toggle="modal" data-target="#filtroReporteIngesos" (click)="reiniciarTablas()"><i class="fa fa-reply-all" aria-hidden="true"></i> Volver</button>
         <h4 class="ml-3">Reporte de Ingresos</h4>
         <p>{{nombre}}</p>
-        <button type="button" class="btn btn-sm ml-auto btn-volver"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Generar PDF</button>
+        <button type="button" class="btn btn-sm ml-auto btn-volver" (click)="generarPDF()"><i class="fa fa-file-pdf" aria-hidden="true"></i> Generar PDF</button>
     </div>
     <div class=" container">
         <div class="col-12 col-md-4 mb-4">
