Gráfica de ingresos
Se agregó la gráfica de ingresos por mes en el reporte de ingresos

--- a/frontend/src/app/componentes/administrador/reportes/reporte-ingresos/reporte-ingresos.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/reporte-ingresos/reporte-ingresos.component.html
@@ -68,6 +68,9 @@
         </div>
     </div>
 
+    <div class="container">
+        <app-grafica-ingresos #graficaIngresos></app-grafica-ingresos>
+    </div>
 
 
 
