ultimo commit de BR

--- a/frontend/src/app/componentes/detalle-producto/detalle-producto.component.html
+++ b/frontend/src/app/componentes/detalle-producto/detalle-producto.component.html
@@ -166,7 +166,7 @@
 
 
                             <div class="col-5 pl-4">
-                                <button type="button" id="btn-compra" class="btn btn-outline-success btn-compra ">Comprar Ahora</button>
+                                <button type="button" id="btn-compra" class="btn btn-outline-success btn-compra " (click)="comprarAhora()">Comprar Ahora</button>
                             </div>
                         </div>
                     </div>
