--- a/frontend/src/app/componentes/productos/productos.component.html
+++ b/frontend/src/app/componentes/productos/productos.component.html
@@ -203,7 +203,7 @@
                                     <div class=" container">
                                         <div class="row">
                                             <div class=" col-8">
-                                                <button type="button" class="btn btn-outline-success boton-compra">Comprar Ahora</button>
+                                                <button type="button" class="btn btn-outline-success boton-compra" (click)="comprarAhora(producto, 1)">Comprar Ahora</button>
                                             </div>
                                             <div class=" col-4">
                                                 <div class="position-relative h-100 shop-icon-bg" title="Agregar al carrito" (click)="agregarCarrito(producto, 1)">
