Detalle de Compra

--- a/frontend/src/app/componentes/historial-compras/historial-compras.component.html
+++ b/frontend/src/app/componentes/historial-compras/historial-compras.component.html
@@ -13,10 +13,11 @@
                 <table class="table  text-center table-striped">
                     <thead class="encabezado-tabla ">
                         <tr>
-                            <th scope="col">Id</th>
+
                             <th scope="col">Producto</th>
                             <th scope="col">Precio</th>
                             <th scope="col">Cantidad</th>
+                            <th scope="col">Subtotal</th>
                             <th scope="col">Detalle</th>
                             <th scope="col">Fecha de Compra</th>
 
@@ -25,10 +26,11 @@
                     <tbody>
                         <ng-container *ngFor="let pedido of productosPedidos">
                             <tr *ngFor="let producto  of pedido.productos , let i=index">
-                                <td>{{ pedido.idpedido}}</td>
+
                                 <td>{{ producto.nombre }}</td>
                                 <td>{{ producto.precio_unitario }}</td>
                                 <td>{{ producto.cantidad }}</td>
+                                <td>{{ producto.cantidad*producto.precio_unitario }} </td>
 
                                 <td *ngIf="i === 0" [attr.rowspan]="(i===0) ? pedido.productos.length:1" style="vertical-align: middle;">
 
