--- a/frontend/src/app/componentes/detalle-historial-compra/detalle-historial-compra.component.html
+++ b/frontend/src/app/componentes/detalle-historial-compra/detalle-historial-compra.component.html
@@ -5,113 +5,79 @@
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" *ngIf="this.pedido" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header header">
-                <h5 class="modal-title titulo " id="exampleModalLabel">DETALLE DEL PEDIDO</h5>
+                <h5 class="modal-title titulo " id="exampleModalLabel">DETALLE DE LA COMPRA</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
 
             </div>
 
-            <div class="modal-body">
-                <hr>
-                <div class=" container mb-3">
-                    <div class=" row">
-                        <div class="col-2">
-                            <p class="componentes">Cliente: </p>
-                        </div>
+            <div class="modal-body fondo-inicio">
 
-                        <div class="col-10">
-                            <p>{{pedido.nombreRemitente}}</p>
-                        </div>
-                    </div>
-                </div>
                 <div class=" container">
-                    <p class="componentes">Productos: </p>
-                    <table class="table table-bordered table-striped">
-                        <thead>
-                            <tr>
-                                <th scope="col">Id Producto</th>
-                                <th scope="col">Nombre Producto</th>
-                                <th scope="col">Precio Unitario</th>
-                                <th scope="col">Cantidad</th>
-                                <th scope="col">Subtotal</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let producto of  productos_lista ">
-                                <th style="text-align: center;">{{producto.idproducto}}</th>
-                                <td>{{producto.nombre}}</td>
-                                <td style="text-align: center;">{{producto.precio_unitario}}</td>
-                                <td style="text-align: center;">{{producto.cantidad}}</td>
-                                <td style="text-align: center;"><span class=" pr-2">L</span>{{producto.subtotalporproducto}}</td>
-                            </tr>
-
-
-                        </tbody>
-                    </table>
-                </div>
-                <div class=" container" style="text-align: right;">
-                    <p class=" mr-4"> <span class="componentes pr-1">Costo Envio:</span> <span class=" pr-1"> L</span><span>{{pedido.precioEnvio}}</span></p>
-                </div>
-                <hr id="hr2">
-                <div class=" container" style="text-align: right;">
-                    <p class=" mr-4"> <span class="componentes pr-1">Total Pagado:</span> <span class=" pr-1"> L</span><span>{{pedido.totalPagado}}</span></p>
+                    <p> <span class="componentes pr-1">Costo Envio:</span> <span class=" pr-1" style="font-size:1.3em;"> L</span><span style="font-size:1.3em;">{{pedido.precioEnvio}}</span></p>
                 </div>
 
-                <div class=" container ml-4 mt-4 mb-4">
-                    <h5>Información Agencia de Envio</h5>
+                <div class=" container mb-3">
+                    <p> <span class="componentes pr-1">Total Pagado:</span> <span class=" pr-1" style="font-size:1.3em;"> L</span><span style="font-size:1.3em;">{{pedido.totalPagado}}</span></p>
                 </div>
-                <div class=" container ml-4 mb-3 mt-3">
+
+
+                <div class=" container mb-3 mt-3">
+
+                    <div class=" container  mt-4 mb-4" style="text-align: center;">
+                        <h5 class="titulo">Información Agencia de Envio</h5>
+                    </div>
                     <div class=" row">
-                        <div class="col-3">
-                            <p class="componentes">Agencia de Envio: </p>
+                        <div class="col-6">
+                            <p class="componentes pl-4">Agencia de Envio: </p>
                         </div>
 
-                        <div class="col-9">
-                            <p>{{pedido.agenciaEnvio}}</p>
+                        <div class="col-6">
+                            <p class="pl-4">{{pedido.agenciaEnvio}}</p>
                         </div>
                     </div>
 
                     <div class=" row">
-                        <div class="col-3">
-                            <p class="componentes">Departamento: </p>
+                        <div class="col-6">
+                            <p class="componentes  pl-4">Departamento: </p>
                         </div>
 
-                        <div class="col-9">
-                            <p>{{pedido.departamento}}</p>
-                        </div>
-                    </div>
-
-                    <div class=" row">
-                        <div class="col-3">
-                            <p class="componentes">Municipio: </p>
-                        </div>
-
-                        <div class="col-9">
-                            <p>{{pedido.municipio}}</p>
+                        <div class="col-6">
+                            <p class="pl-4">{{pedido.departamento}}</p>
                         </div>
                     </div>
 
                     <div class=" row">
-                        <div class="col-3">
-                            <p class="componentes">Dirección: </p>
+                        <div class="col-6">
+                            <p class="componentes  pl-4">Municipio: </p>
                         </div>
 
-                        <div class="col-9">
-                            <p>{{pedido.direccioncompleta}}</p>
+                        <div class="col-6">
+                            <p class="pl-4">{{pedido.municipio}}</p>
                         </div>
                     </div>
 
                     <div class=" row">
-                        <div class="col-3">
-                            <p class="componentes">Domicilio: </p>
+                        <div class="col-6">
+                            <p class="componentes  pl-4">Dirección: </p>
                         </div>
 
-                        <div class="col-9">
-                            <p>{{pedido.domicilio}}</p>
+                        <div class="col-6">
+                            <p class="pl-4">{{pedido.direccioncompleta}}</p>
+                        </div>
+                    </div>
+
+                    <div class=" row">
+                        <div class="col-6">
+                            <p class="componentes  pl-4">Domicilio: </p>
+                        </div>
+
+                        <div class="col-6">
+                            <p class="pl-4">{{pedido.domicilio}}</p>
                         </div>
                     </div>
                 </div>
